# RoNModManager

./: .env  .gitignore  .prettierignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  cliff.toml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ronmodmanager-flatpak.gpg  summary  summary.idx  summary.idx.sig  summary.sig  tsconfig.json  vite.config.ts
.claude/: settings.json
.flatpak/: rust-analyzer.sh
.github/: dependabot.yml
.husky/: pre-commit
docs/: HOSTING_MODPACKS.md  LINUX_WINDOW_PERSISTENCE.md
scripts/: copy_dev_to_prod.py  migrate-default-profile.sh  sync-version.js  take-screenshots.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  ronmodmanager.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/modpacks/: ronmod-export-2026-05-13.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  collections.rs  config.rs  fetch.rs  fetch_archive.rs  fs.rs  game.rs  mod.rs  modio.rs  modpack.rs  mods.rs  profiles.rs  sharing.rs  sync.rs  tags.rs  updater.rs  window.rs
src-tauri/src/models/: config.rs  error.rs  mod.rs  modinfo.rs  modpack.rs  profile.rs  progress.rs
src-tauri/src/services/: addon_map.rs  config_tweaks.rs  downloader.rs  hasher.rs  installer.rs  manifest.rs  mod.rs  modio.rs  modio_api.rs  modpack.rs  nexus_api.rs  profiles.rs  steam.rs
summaries/: 21c9fde3b9986c4f4ee559d67c0c80d5b689465ba875f16de77f3fb7eb12fd8d-54ba87ed78248eeed4a258d01799a314587918b17d26a2b59b8e2709d1f667a2.delta  (+6 more)
(+76 files in other folders)
