[package]
name = "ronmodmanager"
version = "0.1.0"
description = "RoN Mod Manager"
authors = ["SavageCore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ronmodmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
thiserror = "2"
md-5 = "0.11"
crc32fast = "1.5"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
futures-util = "0.3"
zip = "4"
unrar = "0.5"
semver = "1"
dirs = "6"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
mockito = "1"

